--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.feedblocker"
-        minSdkVersion 9
+        minSdkVersion 23
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
